--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.43.4",
     "react-i18next": "^12.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
